<resources>
    <string name="app_name">B97502DW</string>
    <string name="trace">定位</string>
    <string name="imsi_name">简称</string>
    <string name="imsi">imsi</string>
    <string name="send_to_trace">发至定位</string>
    <string name="remove">移除</string>
    <string name="cell_0">通道一：</string>
    <string name="arfcn">频点</string>
    <string name="run_arfcn">频点轮循</string>
    <string name="import_arfcn">导入</string>
    <string name="PCI">PCI</string>
    <string name="IMSI">IMSI</string>
    <string name="down_same">下同</string>
    <string name="cell_1">通道二：</string>
    <string name="up_same">同上</string>
    <string name="cell_2">通道三：</string>
    <string name="cell_3">通道四：</string>
    <string name="cell_0_1">通道一、二</string>
    <string name="bar_view">柱状图</string>
    <string name="target">目标:</string>
    <string name="cell_2_3">通道三、四</string>
    <string name="cfg_arfcn_pci">配置频点/PCI</string>
    <string name="cfg_5g">配置5G</string>
    <string name="cfg_4g">配置4G</string>
    <string name="confirm">确认</string>
    <string name="back">返回</string>
    <string name="edit_list">编辑名单</string>
    <string name="cancel">取消</string>
    <string name="black_white_list">黑名单</string>
    <string name="long_click_imsi">(长按IMSI可修改或删除)</string>
    <string name="business_model">业务模式</string>
    <string name="catch_str">侦码</string>
    <string name="catch_str_tip">智能配置业务参数，先侦码再选择目标切换定位</string>
    <string name="trace_str">专业配置业务参数，直接定位</string>
    <string name="cfg_arfcn">配置频点</string>
    <string name="add_arfcn">添加频点</string>
    <string name="trace_target">定位目标</string>
    <string name="select_cell_for_trace">请选择通道定位此目标</string>
    <string name="cell0">通道一</string>
    <string name="cell1">通道二</string>
    <string name="cell2">通道三</string>
    <string name="cell3">通道四</string>
    <string name="dual_cell">双通道</string>
    <string name="city_list">城市列表</string>
    <string name="desc_city">城市(如：697*1000 = 697000)</string>
    <string name="timing_offset">时偏(GPS)</string>
    <string name="title_city">城市</string>
    <string name="set_as_cur_city">设为当前城市</string>
    <string name="delete_city">删除城市信息</string>
    <string name="delete_confirm">确定删除？</string>
    <string name="add_city">添加城市</string>
    <string name="ed_city">城市&#058;</string>
    <string name="ed_arfcn">频点&#058;</string>
    <string name="ed_timing_offset">时偏&#058;</string>
    <string name="format_time_offset">时偏数据格式：697*1000 = 697000</string>
    <string name="out_data">导出数据</string>
    <string name="input_out_file_name">请输入导出文件名</string>
    <string name="board_log">基带LOG</string>
    <string name="input_file_name">请输入文件名</string>
    <string name="freq_result">扫频结果</string>
    <string name="down_arfcn">下行频点</string>
    <string name="RSRP">RSRP</string>
    <string name="bandwidth">带宽</string>
    <string name="connecting">连接中…</string>
    <string name="login">登录</string>
    <string name="offline_mode">离线模式</string>
    <string name="board_version">基带版本</string>
    <string name="hard_version">硬件版本</string>
    <string name="logical_version">逻辑版本</string>
    <string name="soft_version">软件版本</string>
    <string name="upgrade_version">升级基带版本</string>
    <string name="known">知道了</string>
    <string name="cfg_run_arfcn">配置轮循频点</string>
    <string name="run_time">轮循时间：</string>
    <string name="stop_work_tip">确定停止当前工作吗？</string>
    <string name="sync_mode">同步模式</string>
    <string name="GPS">GPS</string>
    <string name="GPS_BeiDou">GPS+北斗</string>
    <string name="BeiDou">仅北斗</string>
    <string name="cfg_offset_tip">请在城市时偏设置各频点时偏</string>
    <string name="air">空口</string>
    <string name="cfg_trace">定位配置</string>
    <string name="dev_a_cfg">设备A配置</string>
    <string name="dev_b_cfg">设备B配置</string>
    <string name="arfcn_empty_tip">(通道频点为空，表示不开启此通道)</string>
    <string name="open">开启</string>
    <string name="clear">清空</string>
    <string name="upgrade_list">升级文件列表</string>
    <string name="work_mode">工作模式</string>
    <string name="single_cell">单小区</string>
    <string name="two_cell">双小区</string>
    <string name="list_empty">列表无数据</string>
    <string name="order">次</string>
    <string name="freq_band">扫网频段</string>
    <string name="dev_state">设备状态</string>
    <string name="start_freq">开启扫网</string>
    <string name="all_select">全选</string>
    <string name="freq_list">扫网列表</string>
    <string name="import_trace">导入定位</string>
    <string name="TAC">TAC</string>
    <string name="ECI">ECI</string>
    <string name="up_arfcn">上行频点</string>
    <string name="RX">RX</string>
    <string name="PA">PA</string>
    <string name="PK">PK</string>
    <string name="app_version">APP版本</string>
    <string name="city_offset">城市时偏</string>
    <string name="data_out">采集数据导出</string>
    <string name="reboot">基带重启</string>
    <string name="cell_state">通道状态</string>
    <string name="sync_state">同步状态</string>
    <string name="lose_sync">失步</string>
    <string name="temp">温度</string>
    <string name="vol">电压</string>
    <string name="state_time_line">状态时间线:</string>
    <string name="catch_trace">侦码定位</string>
    <string name="arfcn_pci">频点/PCI</string>
    <string name="catch_list">侦码列表</string>
    <string name="unicom">联通</string>
    <string name="mobile">移动</string>
    <string name="telecom">电信</string>
    <string name="sva">广电</string>
    <string name="operator">运营商</string>
    <string name="time">时间</string>
    <string name="rsrp">场强</string>
    <string name="number">次数</string>
    <string name="nr_step">NR流程：</string>
    <string name="lte_step">LTE流程：</string>
    <string name="start_catch">开启侦码</string>
    <string name="gain">增益：</string>
    <string name="far">标准</string>
    <string name="near">近距</string>
    <string name="input_add">输入添加</string>
    <string name="file_import">文件导入</string>
    <string name="clear_list">清空列表</string>
    <string name="error_city">城市名称不能为空。</string>
    <string name="error_arfcn">ARFCN数据错误，请检查。</string>
    <string name="error_empty_timingOffset">时偏不能为空。</string>
    <string name="error_timingOffset">时偏输入错误。</string>
    <string name="error_same_city">时偏参数已更新</string>
    <string name="warning">警告</string>
    <string name="set_city_confirm">确定设置: %s 为当前城市</string>
    <string name="delete_city_confirm">确定删除: %s</string>
    <string name="refuse_tip">拒绝权限，无法提供服务!</string>
    <string name="sdk_init_complete">SDK 初始化完成</string>
    <string name="into_connect_state">进入连接设备状态…</string>
    <string name="freq">扫频</string>
    <string name="setting">设置</string>
    <string name="click_again">再次点击返回键退出程序</string>
    <string name="idle">空闲</string>
    <string name="not_ready">未就绪</string>
    <string name="dev_err_tip">设备异常，须掉电重启</string>
    <string name="phy_err_tip">PHY异常，请结束定位后重试</string>
    <string name="connected_dev">已连接设备</string>
    <string name="cfg_state_err_tip">检测与上次状态信息不匹配</string>
    <string name="stop_cell0_work">结束通道一的工作</string>
    <string name="stop_cell1_work">结束通道二的工作</string>
    <string name="stop_cell2_work">结束通道三的工作</string>
    <string name="stop_cell3_work">结束通道四的工作</string>
    <string name="recover_cell0_work">恢复通道一的工作</string>
    <string name="recover_cell1_work">恢复通道二的工作</string>
    <string name="recover_cell2_work">恢复通道三的工作</string>
    <string name="recover_cell3_work">恢复通道四的工作</string>
    <string name="gps_sync">GPS同步</string>
    <string name="air_sync">Air同步</string>
    <string name="vol_min">电量过低</string>
    <string name="vol_min_tip">严重低电，请立即充电或更换电池，关闭定位、扫频、升级等功能！</string>
    <string name="vol_min_close_tip">严重低电，请立即充电或更换电池，将自动关闭非目标上号小区！</string>
    <string name="vol_min_title">低电报警</string>
    <string name="add_vol_tip">电量过低，请及时充电或更换电池！</string>
    <string name="query_version_file">查询基带版本失败</string>
    <string name="pa_cfg_fail">PA控制IO口配置失败</string>
    <string name="connecting_dev">检测到设备，正在连接中</string>
    <string name="traceing">定位中</string>
    <string name="disconnect_dev">连接已断开, 重连中</string>
    <string name="stop_work">结束工作</string>
    <string name="change_imsi_tip">是否切换此目标至定位？</string>
    <string name="changeing">切换中</string>
    <string name="clear_title">清空提示</string>
    <string name="clear_tip">确定要清空侦码列表吗？</string>
    <string name="hint_code"><![CDATA[<font color=\"#b6b6b6\"><small>IMSI置空则不开此通道</small></font>]]></string>
    <string name="no_freq_data_tip">未检测到扫频数据，请先开启扫频</string>
    <string name="cell_not_support_tip">该通道不支持此频点或已存在</string>
    <string name="b97502_cell0_support_tip">通道一仅支持输入N41/N78/N79对应的频点!</string>
    <string name="b97502_cell1_support_tip">通道二仅支持输入B3/B5/B8/B40对应的频点!</string>
    <string name="b97502_cell2_support_tip">通道三仅支持输入B1/N1/N28对应的频点!</string>
    <string name="b97502_cell3_support_tip">通道四仅支持输入B3/B34/B39/B40/B41对应的频点!</string>
    <string name="b97501_cell0_support_tip">通道一仅支持输入N28/N78/N79对应的频点!</string>
    <string name="b97501_cell1_support_tip">通道二仅支持输入B34/B39/B40/B41对应的频点!</string>
    <string name="b97501_cell2_support_tip">通道三仅支持输入N1/N41对应的频点!</string>
    <string name="b97501_cell3_support_tip">通道四仅支持输入B1/B3/B5/B8对应的频点!</string>
    <string name="pci_empty_tip">PCI不能为空</string>
    <string name="detect">检测到</string>
    <string name="pci_err_tip_4g">输入4G频点 PCI数据错误,取值范围：0~503</string>
    <string name="pci_err_tip_5g">输入5G频点 PCI数据错误,取值范围：0~1007</string>
    <string name="imsi_err_tip">IMSI数据长度错误,必须为15位数字</string>
    <string name="not_use_cell3">通道三为N1或B1，通道四频点只能配置次B3!</string>
    <string name="cell3_need_b40">检测到通道二为B40，要求通道四也只能为B40!</string>
    <string name="cell1_need_b3">检测到通道四为B3，要求通道二也只能为B3!</string>
    <string name="import_arfcn_success">导入成功，请左滑到定位配置界面检查或开启定位</string>
    <string name="stop_freq_tip">是否结束频段扫网？</string>
    <string name="wait">请稍后</string>
    <string name="freq_stoping">正在结束扫网</string>
    <string name="freq_stoped">频段扫频结束</string>
    <string name="dev_offline">设备不在线，请先开启并连接设备</string>
    <string name="catching_tip">侦码中，请先结束侦码</string>
    <string name="traceing_tip">定位中，请先结束定位</string>
    <string name="other_stoping_tip">定位结束中，请稍后</string>
    <string name="select_band">请先勾选扫描频段</string>
    <string name="gps_not_sync_tip">GPS未同步，可在设置中切换空口模式</string>
    <string name="cell_not_support_band">当前通道不支持扫此频段的频点</string>
    <string name="freq_scaning_info">{0}频段扫网中..</string>
    <string name="freq_list_empty">频点列表为空，停止该频点扫频</string>
    <string name="stop_freq">结束扫网</string>
    <string name="freq_scanning">扫频中</string>
    <string name="copying">正在拷贝升级文件</string>
    <string name="update_dev_dis_tip">设备已断开连接，系统升级失败！</string>
    <string name="trace_freq_no_data">定位/扫频 均无数据结果</string>
    <string name="reboot_tip">请确认是否操作基带重启？</string>
    <string name="rebooting">正在配置重启</string>
    <string name="format_err_tip">数据格式不符合规范，请检查!</string>
    <string name="import_result">导入结果</string>
    <string name="import_all_count">导入总数量：</string>
    <string name="import_err_count">错误数：</string>
    <string name="import_repeat_count">重复数：</string>
    <string name="import_success_count">成功数：</string>
    <string name="clear_warning">清空警告</string>
    <string name="clear_warning_tip">是否清空当前黑名单列表？</string>
    <string name="add_black_title">添加名单</string>
    <string name="add">添加</string>
    <string name="edit_black_title">编辑名单</string>
    <string name="confirm_modify">确认修改</string>
    <string name="delete">删除</string>
    <string name="data_empty_tip">数据不能为空</string>
    <string name="imsi_repeat_tip">添加失败，当前IMSI已存在列表中，请重新输入!</string>
    <string name="delete_tip_title">删除提示</string>
    <string name="delete_tip">确定要删除该黑名单吗？</string>
    <string name="dev_busy_tip">设备忙，请稍后再试</string>
    <string name="dev_info">设备信息</string>
    <string name="auto_time">轮循时间</string>
    <string name="param_set">参数调整</string>
    <string name="special_models">特殊机型策略</string>
    <string name="special_models_tip">高通8Genx及华为相关</string>
    <string name="arfcn_real">扫频点-实时显示</string>
    <string name="arfcn_file">扫频点-文件上报</string>
    <string name="band_real">扫频段-实时显示</string>
    <string name="band_file">扫频段-文件上报</string>
</resources>