<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_f8f8f8"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_left_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg_color"
        android:padding="10dp"
        android:text="@string/setting"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/ll_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector_single"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_version"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:textColor="#818181"
            android:textSize="16sp"
            tools:text="V1.0" />

    </LinearLayout>

    <TextView
        android:id="@+id/ll_nr_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:background="@drawable/layout_selector_single"
        android:text="@string/dev_info"
        android:textColor="#333333"
        android:textSize="16sp"
        android:drawableEnd="@mipmap/more" />

    <LinearLayout
        android:id="@+id/ll_sync_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/layout_selector_single"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sync_mode"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sync_model"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:textColor="#818181"
            android:textSize="16sp"
            android:drawableEnd="@mipmap/more"
            tools:text="@string/air" />
    </LinearLayout>
    <TextView
        android:id="@+id/ll_freq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/layout_selector_single"
        android:padding="10dp"
        android:text="@string/freq"
        android:textColor="#333333"
        android:textSize="16sp"
        android:drawableEnd="@mipmap/more" />

    <LinearLayout
        android:id="@+id/ll_run_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_selector_single"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/auto_time"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_run_time"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="60"
            android:textColor="#818181"
            android:textSize="16sp"
            android:drawableEnd="@mipmap/more" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_special_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_selector_single"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_special_model_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_models"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_special_model_tip"/>
        <TextView
            android:id="@+id/tv_special_model_tip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/special_models_tip"
            android:textColor="#ccc"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_special_model_title"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Switch
            android:id="@+id/switch_special_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="20dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ll_data_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/layout_selector_single"
        android:padding="10dp"
        android:text="@string/data_out"
        android:textColor="#333333"
        android:textSize="16sp"
        android:drawableEnd="@mipmap/more" />

    <TextView
        android:id="@+id/ll_param_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/layout_selector_single"
        android:text="@string/param_set"
        android:textColor="#333333"
        android:textSize="16sp"
        android:drawableEnd="@mipmap/more" />

    <TextView
        android:id="@+id/tv_reboot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_selector_single"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/reboot"
        android:textColor="@color/red"
        android:textSize="18sp" />
</LinearLayout>