<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_freq_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg_color"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/freq"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:background="@mipmap/back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/freq_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_setting"
        android:paddingHorizontal="10dp"
        android:paddingBottom="8dp"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="4dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_freq_title" />

    <TextView
        android:id="@+id/textView1"
        style="@style/TextLeftStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:text="@string/freq_band"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <TextView
        android:id="@+id/tv_freq_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="end"
        android:textColor="@color/color_1c1c1c"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toStartOf="@+id/iv_anim_freq"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <ImageView
        android:id="@+id/iv_anim_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/do_freq_animation"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_f8f8f8"
        app:layout_constraintTop_toBottomOf="@+id/list_check_box" />

    <ImageView
        android:id="@+id/iv_cfg_arfcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/freq_arcfn_cfg_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start_scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_start_scan" />

    <TextView
        android:id="@+id/tv_start_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg_ok"
        android:gravity="center"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:text="@string/start_freq"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/all_select"
        android:textSize="14sp"
        android:theme="@style/MainCheckBoxTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_start_scan" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_f8f8f8"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_scan" />

    <View
        android:id="@+id/view5"
        android:layout_width="4dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextLeftStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:text="@string/freq_list"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/tv_import_to_trace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/import_trace"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:gravity="center"
            android:text="@string/TAC"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:gravity="center"
            android:text="@string/ECI"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/up_arfcn"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/down_arfcn"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/PCI"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/RX"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/PA"
            android:textColor="@color/color_212121"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/PK"
            android:textColor="@color/color_212121"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/bandwidth"
            android:textColor="@color/color_212121"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/freq_scan_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="1dp"
        android:layout_weight="1"
        android:background="@color/color_f8f8f8"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>